# network-asset-generation

./: .envtexample  .gitignore  README.md  app.py  pyproject.toml
agents/: search_agent.py
schemas/: schemas.py
services/: service.py
setup/: install.py  install_uv.sh
templates/: index.html
